# iolinki-master

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  SECURITY.md  check_quality.sh
.github/workflows/: ci.yml
docs/: HARDWARE_VALIDATION.md  IMPLEMENTATION_STATUS.md  PHY_BOUNDARY.md  ROADMAP.md  TESTING.md
include/iolinki_master/: master.h
src/: master_controller.c  master_internal.h  master_isdu.c  master_parameters.c  master_port.c  master_sio.c
tests/: CMakeLists.txt  fake_iolink_device.c  fake_iolink_device.h  test_master_controller.c  test_master_fake_device.c  test_master_isdu.c  test_master_isdu_public.c  test_master_parameters.c  test_master_pd.c  test_master_public_flow.c  test_master_public_header.c  test_master_real_iolinki_device.c  test_master_sio_public.c  test_master_startup.c  test_master_tick.c
